exports[`friends reducer toggleActive action should toggle a new friend active and set default 1`] = `
Object {
  "42": Object {
    "isActive": true,
    "name": "Jim",
    "rank": 2,
    "recordID": 42,
  },
  "50": Object {
    "isActive": true,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;

exports[`friends reducer toggleActive action should toggle an existing friend (in)active 1`] = `
Object {
  "50": Object {
    "isActive": false,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;

exports[`friends reducer toggleActive action should toggle an existing friend (in)active 2`] = `
Object {
  "50": Object {
    "isActive": true,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;
